--- a/scss/sections/advert.scss
+++ b/scss/sections/advert.scss
@@ -1,18 +1,18 @@
 .advert {
-    margin-bottom: 190px;
+    margin-bottom: 190rem;
     background: linear-gradient(155deg, #fff47e 0%, #f9dd55 55%, #f0d34c 65%, #e0c340 80%);
     
     @include desktop {
-        margin-bottom: 150px;
+        margin-bottom: 150rem;
     }
     @include desktop-small {
-        margin-bottom: 100px;
+        margin-bottom: 100rem;
     }
     @include tablet-small {
-        margin-bottom: 40px;
+        margin-bottom: 40rem;
     }
     @include mobile {
-        margin-bottom: 20px;
+        margin-bottom: 20rem;
     }
 
     &__container {
@@ -55,21 +55,21 @@
     
     &__info {
         font-family: var(--main-font);
-        padding: 128px 200px 155px 10px;
+        padding: 128rem 200rem 155rem 10rem;
         position: relative;
 
         @include desktop {
-            padding: 80px 60px 80px 10px;
+            padding: 80rem 60rem 80rem 10rem;
         }
         @include tablet-small {
-            padding: 30px;
+            padding: 30rem;
             text-align: center;
         }
     }
     
     &__info .white_rect {
         position: absolute;
-        max-width: 541px;
+        max-width: 541rem;
         left: -3%;
         top: 12%;
         z-index: auto;
@@ -77,54 +77,54 @@
             top: 6%;
         }
         @include desktop-small {
-            max-width: 350px;
+            max-width: 350rem;
             top: 11%;
             left: 0;
         }
         @include tablet-small {
-            max-width: 280px;
+            max-width: 280rem;
             top: 6%;
             left: 15%;
         }
         @include mobile {
-            max-width: 180px;
+            max-width: 180rem;
             top: 10%;
             left: 5%;
         }
     }
     
     &__title {
-        max-width: 616px;
+        max-width: 616rem;
         font-weight: 900;
-        font-size: 111px;
+        font-size: 111rem;
         line-height: 123%;
         color: var(--c-black);
-        margin-bottom: 33px;
+        margin-bottom: 33rem;
         position: relative;
 
         @include desktop {
-            font-size: 80px;
+            font-size: 80rem;
         }
         @include desktop-small {
-            font-size: 70px;
+            font-size: 70rem;
             font-weight: 800;
         }
         @include tablet {
-            font-size: 60px;
+            font-size: 60rem;
             font-weight: 700;
         }
         @include tablet-small {
-            font-size: 50px;
+            font-size: 50rem;
             margin-inline: auto;
         }
         @include mobile {
-            font-size: 34px;
-            margin-bottom: 10px;
+            font-size: 34rem;
+            margin-bottom: 10rem;
         }
     }
 
     &__desc {
-        max-width: 666px;
+        max-width: 666rem;
 
         @include tablet-small {
             margin-inline: auto;
@@ -132,106 +132,106 @@
 
         #advert__offer {
             font-weight: 500;
-            font-size: 36px;
+            font-size: 36rem;
             line-height: 145%;
             letter-spacing: -0.02em;
             color: #231300;
-            margin-bottom: 40px;
+            margin-bottom: 40rem;
 
             @include desktop {
-                font-size: 30px;
+                font-size: 30rem;
             }
             @include tablet {
-                font-size: 22px;
+                font-size: 22rem;
                 font-weight: 400;
-                margin-bottom: 36px;
+                margin-bottom: 36rem;
             }
             @include tablet-small {
-                margin-bottom: 30px;
+                margin-bottom: 30rem;
             }
             @include mobile {
-                margin-bottom: 10px;
-                font-size: 16px;
+                margin-bottom: 10rem;
+                font-size: 16rem;
             }
         }
         
         #advert__date {
             font-weight: 700;
-            font-size: 36px;
+            font-size: 36rem;
             line-height: 145%;
             letter-spacing: 0.02em;
             color: var(--c-black);
 
             @include desktop {
-                font-size: 30px;
+                font-size: 30rem;
             }
             @include tablet {
-                font-size: 26px;
+                font-size: 26rem;
             }
             @include mobile {
-                font-size: 18px;
+                font-size: 18rem;
             }
         }
         
         #advert__cond {
             font-weight: 400;
-            font-size: 36px;
+            font-size: 36rem;
             line-height: 145%;
             letter-spacing: -0.02em;
             color: var(--c-black);
-            margin-bottom: 51px;
+            margin-bottom: 51rem;
 
             @include desktop {
-                font-size: 30px;
+                font-size: 30rem;
             }
             @include tablet {
-                margin-bottom: 36px;
-                font-size: 22px;
+                margin-bottom: 36rem;
+                font-size: 22rem;
             }
             @include tablet-small {
-                margin-bottom: 30px;
+                margin-bottom: 30rem;
             }
             @include mobile {
-                margin-bottom: 10px;
-                font-size: 16px;
+                margin-bottom: 10rem;
+                font-size: 16rem;
             }
         }
     }
     
     &__button {
         font-weight: 600;
-        font-size: 27px;
+        font-size: 27rem;
         letter-spacing: 0.02em;
         color: var(--c-white);
         background: var(--c-black);
-        border-radius: 8px;
-        padding: 32px 51px;
+        border-radius: 8rem;
+        padding: 32rem 51rem;
 
         @include desktop-small {
-            padding: 22px 40px;
+            padding: 22rem 40rem;
         }
         @include tablet {
-            font-size: 24px;
-            padding: 20px 36px;
+            font-size: 24rem;
+            padding: 20rem 36rem;
         }
         @include tablet-small {
-            font-size: 22px;
+            font-size: 22rem;
             font-weight: 500;
-            padding: 14px 28px;
+            padding: 14rem 28rem;
         }
         @include mobile {
-            font-size: 16px;
+            font-size: 16rem;
             font-weight: 400;
-            padding: 8px 18px;
+            padding: 8rem 18rem;
         }
     }
     
     &__image .star {
         position: absolute;
-        max-width: 76px;
+        max-width: 76rem;
 
         @include tablet {
-            max-width: 56px;
+            max-width: 56rem;
         }
     }
     
