--- a/scss/sections/join.scss
+++ b/scss/sections/join.scss
@@ -2,82 +2,84 @@
     background: var(--c-yellow-second);
 
     &__container {
-        padding: 141px 460px 156px;
+        padding: 141rem 460rem 156rem;
         text-align: center;
         font-family: var(--main-font);
 
         @include desktop {
-            padding: 100px 200px;
+            padding: 100rem 200rem;
         }
         @include tablet {
-            padding: 40px 30px;
+            padding: 40rem 30rem;
         }
         @include tablet-small {
-            padding: 30px;
+            padding: 30rem;
+        }
+        @include mobile {
+            padding: 20rem;
         }
     }
     
     &__title {
         font-weight: 900;
-        font-size: 55px;
+        font-size: 55rem;
         line-height: 127%;
         letter-spacing: 0.03em;
         text-align: center;
         color: var(--c-white);
-        margin-bottom: 37px;
+        margin-bottom: 37rem;
 
         @include desktop {
-            font-size: 48px;
+            font-size: 48rem;
         }
         @include tablet {
-            margin-bottom: 20px;
-            font-size: 40px;
+            margin-bottom: 20rem;
+            font-size: 40rem;
         }
         @include tablet-small {
-            font-size: 32px;
+            font-size: 32rem;
         }
         @include mobile {
-            font-size: 26px;
+            font-size: 26rem;
         }
     }
     
     &__desc {
         font-weight: 400;
-        font-size: 32px;
+        font-size: 32rem;
         line-height: 109%;
         letter-spacing: 0.03em;
         color: #fffcf8;
-        margin-bottom: 49px;
+        margin-bottom: 49rem;
 
         @include tablet {
-            font-size: 24px;
-            margin-bottom: 36px;
+            font-size: 24rem;
+            margin-bottom: 36rem;
         }
         @include tablet-small {
-            font-size: 20px;
+            font-size: 20rem;
         }
         @include mobile {
-            font-size: 16px;
+            font-size: 16rem;
         }
     }
     &__email {
-        max-width: 574px;
+        max-width: 574rem;
         margin-inline: auto;
         display: flex;
         justify-content: space-between;
-        gap: 10px;
+        gap: 10rem;
         background: var(--c-white);
-        border-radius: 10px;
-        padding: 10px;
+        border-radius: 10rem;
+        padding: 10rem;
 
         @include tablet {
             max-width: 90%;
-            padding: 6px;
+            padding: 6rem;
         }
         @include mobile {
-            max-width: initial;
-            padding-top: 10px;
-            padding-bottom: 10px;
+            padding-top: 10rem;
+            padding-bottom: 10rem;
         }
     }
     
@@ -91,37 +93,37 @@
     &__email input[placeholder] {
         font-family: var(--main-font);
         font-weight: 400;
-        font-size: 24px;
+        font-size: 24rem;
         line-height: 146%;
         letter-spacing: 0.03em;
         color: #767676;
 
         @include tablet {
-            font-size: 20px;
+            font-size: 20rem;
             line-height: 116%;
         }
         @include mobile {
-            font-size: 14px;
+            font-size: 14rem;
         }
     }
     
     &__button {
         font-weight: 500;
-        font-size: 33px;
+        font-size: 33rem;
         line-height: 106%;
         letter-spacing: 0.03em;
         text-transform: capitalize;
         color: var(--c-white);
         background: var(--c-black);
-        border-radius: 8px;
-        padding: 16px 35px;
+        border-radius: 8rem;
+        padding: 16rem 35rem;
 
         @include desktop {
-            font-size: 28px;
+            font-size: 28rem;
         }
         @include tablet {
-            font-size: 20px;
-            padding: 12px 32px;
+            font-size: 20rem;
+            padding: 12rem 32rem;
         }
         @include mobile {
             display: none;
@@ -132,7 +134,7 @@
         display: none;
         justify-content: center;
         align-items: center;
-        padding-inline: 3px;
+        padding-inline: 3rem;
 
         @include mobile {
             display: flex;
