--- a/scss/sections/brands.scss
+++ b/scss/sections/brands.scss
@@ -1,25 +1,25 @@
 .brands {
-    margin-bottom: 69px;
+    margin-bottom: 69rem;
     background: var(--c-yellow-main);
 
     @include tablet-small {
-        margin-bottom: 30px;
+        margin-bottom: 30rem;
     }
     @include mobile {
-        margin-bottom: 20px;
+        margin-bottom: 20rem;
     }
 
     &__container {
-        padding: 50px 171px;
+        padding: 50rem 171rem;
 
         @include desktop {
-            padding: 25px 60px;
+            padding: 25rem 60rem;
         }
         @include tablet {
-            padding-inline: 30px;
+            padding-inline: 30rem;
         }
         @include mobile {
-            padding-inline: 20px;
+            padding-inline: 20rem;
         }
     }
 
@@ -27,18 +27,18 @@
         display: flex;
         justify-content: baseline;
         align-items: center;
-        gap: 121px;
+        gap: 121rem;
 
         @include desktop {
-            gap: 80px;
+            gap: 80rem;
         }
         @include tablet {
-            gap: 30px;
+            gap: 30rem;
         }
         @include mobile {
             flex-wrap: wrap;
             row-gap: initial;
-            column-gap: 30px;
+            column-gap: 30rem;
         }
     }
 
@@ -49,7 +49,7 @@
         }
 
         @include mobile {
-            flex: calc((100% - 30px * 2) / 3);
+            flex: calc((100% - 30rem * 2) / 3);
         }
     } 
 }
