--- a/scss/sections/header.scss
+++ b/scss/sections/header.scss
@@ -6,7 +6,7 @@
     z-index: 3;
 
     &__container {
-        max-width: 1920px;
+        max-width: 1920rem;
         margin-inline: auto;
         display: flex;
         justify-content: space-between;
