--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ body {
   right: 0;
   z-index: 3; }
   .header__container {
-    max-width: 1920px;
+    max-width: 1920rem;
     margin-inline: auto;
     display: -webkit-box;
     display: -ms-flexbox;
