--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,10 +1,19 @@
-:root {
-    line-height: 1.5;
+html,
+*,
+*:before,
+*:after {
+	box-sizing: border-box;
 }
-  
-h1, h2, h3, h4, h5, figure, p, ol, ul {
-    margin: 0;
-    padding: 0;
+
+* {
+	margin: 0;
+	padding: 0;
+    outline: 0;
+}
+
+html {
+	line-height: 1.15;
+	-webkit-text-size-adjust: 100%;
 }
   
 ol[role="list"], ul[role="list"] {
