--- a/scss/sections/join.scss
+++ b/scss/sections/join.scss
@@ -81,32 +81,31 @@
             padding-top: 10rem;
             padding-bottom: 10rem;
         }
-    }
-    
-    &__email input {
-        border: none;
-        outline: none;
-        flex: 1;
-    }
-    
-    
-    &__email input[placeholder] {
-        font-family: var(--main-font);
-        font-weight: 400;
-        font-size: 24rem;
-        line-height: 146%;
-        letter-spacing: 0.03em;
-        color: #767676;
 
-        @include tablet {
-            font-size: 20rem;
-            line-height: 116%;
-        }
-        @include mobile {
-            font-size: 14rem;
+        input {
+            border: none;
+            flex: 1;
+            width: 100%;
+
+            &::placeholder {
+                font-family: var(--main-font);
+                font-weight: 400;
+                font-size: 24rem;
+                line-height: 146%;
+                letter-spacing: 0.03em;
+                color: #767676;
+        
+                @include tablet {
+                    font-size: 20rem;
+                    line-height: 116%;
+                }
+                @include mobile {
+                    font-size: 14rem;
+                }
+            }
         }
     }
-    
+
     &__button {
         font-weight: 500;
         font-size: 33rem;
