--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,18 @@
-:root {
-  line-height: 1.5; }
+html,
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
-h1, h2, h3, h4, h5, figure, p, ol, ul {
+* {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  outline: 0; }
+
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%; }
 
 ol[role="list"], ul[role="list"] {
   list-style: none;
@@ -57,7 +66,6 @@ body {
 .btn {
   display: inline-block;
   border: 0;
-  outline: 0;
   cursor: pointer; }
 
 .container {
@@ -1391,26 +1399,62 @@ body {
       .join__email {
         padding-top: 10rem;
         padding-bottom: 10rem; } }
-  .join__email input {
-    border: none;
-    outline: none;
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1; }
-  .join__email input[placeholder] {
-    font-family: var(--main-font);
-    font-weight: 400;
-    font-size: 24rem;
-    line-height: 146%;
-    letter-spacing: 0.03em;
-    color: #767676; }
-    @media (max-width: 992px) {
-      .join__email input[placeholder] {
-        font-size: 20rem;
-        line-height: 116%; } }
-    @media (max-width: 576px) {
-      .join__email input[placeholder] {
-        font-size: 14rem; } }
+    .join__email input {
+      border: none;
+      -webkit-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1;
+      width: 100%; }
+      .join__email input::-webkit-input-placeholder {
+        font-family: var(--main-font);
+        font-weight: 400;
+        font-size: 24rem;
+        line-height: 146%;
+        letter-spacing: 0.03em;
+        color: #767676; }
+      .join__email input:-ms-input-placeholder {
+        font-family: var(--main-font);
+        font-weight: 400;
+        font-size: 24rem;
+        line-height: 146%;
+        letter-spacing: 0.03em;
+        color: #767676; }
+      .join__email input::-ms-input-placeholder {
+        font-family: var(--main-font);
+        font-weight: 400;
+        font-size: 24rem;
+        line-height: 146%;
+        letter-spacing: 0.03em;
+        color: #767676; }
+      .join__email input::placeholder {
+        font-family: var(--main-font);
+        font-weight: 400;
+        font-size: 24rem;
+        line-height: 146%;
+        letter-spacing: 0.03em;
+        color: #767676; }
+        @media (max-width: 992px) {
+          .join__email input::-webkit-input-placeholder {
+            font-size: 20rem;
+            line-height: 116%; }
+          .join__email input:-ms-input-placeholder {
+            font-size: 20rem;
+            line-height: 116%; }
+          .join__email input::-ms-input-placeholder {
+            font-size: 20rem;
+            line-height: 116%; }
+          .join__email input::placeholder {
+            font-size: 20rem;
+            line-height: 116%; } }
+        @media (max-width: 576px) {
+          .join__email input::-webkit-input-placeholder {
+            font-size: 14rem; }
+          .join__email input:-ms-input-placeholder {
+            font-size: 14rem; }
+          .join__email input::-ms-input-placeholder {
+            font-size: 14rem; }
+          .join__email input::placeholder {
+            font-size: 14rem; } }
   .join__button {
     font-weight: 500;
     font-size: 33rem;
